--- a/Calling/src/index.css
+++ b/Calling/src/index.css
@@ -14,6 +14,12 @@ html,
   height: 100%;
 }
 
+html,
+body {
+  /* Prevent pull down to refresh behavior on mobile */
+  overscroll-behavior-y: contain;
+}
+
 .wrapper {
   height: 100%;
   display: flex;
